--- a/outfit/templates/user_auth/add_cloth_facts.html
+++ b/outfit/templates/user_auth/add_cloth_facts.html
@@ -18,40 +18,35 @@
     
 <div class="row">
     <div class='success'>
-        <div class='col-md-4'>
+        <div class='col-md-3'>
             
             <h3 class='text-info'>Cloth </h3>
             <img src="{{ cloth.cloth_image.url }}"  class="img-rounded" alt="{{cloth.cloth_description}}"/>
             <p> {{cloth.cloth_description }} </p>
           
             <a href="/auth/dash/">
-                <span class="glyphicon glyphicon-arrow-left text-danger" aria-hidden="true">back
-                </span> 
+                <button type='button' class='btn btn-info'>Back</button>
             </a>
           
           
             <a href="/auth/delete_cloth/{{cloth.id}}/delete">
-                <span class="glyphicon glyphicon-remove-circle text-error" aria-hidden="true">
                     <button type='button' class='btn btn-danger'>Delete</button>
-                </span> 
             </a>
             {%if clothfacts %}
             <a href="/auth/update_cloth_facts/{{cloth.id}}/view">
-                <span class="glyphicon glyphicon-edit text-success" aria-hidden="true">
-                    <button type='button' class='btn btn-info'>Update</button>
-                </span> 
+                <button type='button' class='btn btn-success'>Update</button>
             </a>
             {%endif%}
             
         </div>
         
-        <div class='col-md-6'>
+        <div class='col-md-3'>
         {%if clothfacts %}    
         <h3 class='text-info'>Cloth Characteristics</h3>
-            <h4 class='text-success'>Type: {{ clothfacts.cloth_type|capfirst }}<h4>
-            <h4 class='text-success'>Material: {{ clothfacts.cloth_material|capfirst }}<h4>
-            <h4 class='text-success'>Color: {{ clothfacts.cloth_color|capfirst }}<h4>
-            <h4 class='text-success'>Print: {{ clothfacts.cloth_print|capfirst }}<h4>
+            <span style="font-size: large">Type: &nbsp{{ clothfacts.cloth_type|capfirst }}</span><br/>
+            <span style="font-size: large">Material/Fabric: &nbsp{{ clothfacts.cloth_material|capfirst }}</span><br/>
+            <span style="font-size: large">Color:&nbsp {{ clothfacts.cloth_color|capfirst }}</span><br/>
+            <span style="font-size: large">Print: &nbsp {{ clothfacts.cloth_print|capfirst }}</span><br/>
         
         {%else%}
         <h3 class='text-info'>Add Cloth Facts</h3>
