--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     {% load staticfiles %}
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -51,7 +52,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-            <li><a href="{% url 'index' %}">Day's Outfit</a></li>
+            <li ><a href="{% url 'index' %}">Day's Outfit</a></li>
             <li> <a href="{% url 'trya' %}">MyCloset</a></li>
             <li><a href="{% url 'closet_upload' %}">Upload</a></li>
             <li><a href="{% url 'user_activities' %}">Activities</a></li>
@@ -93,29 +94,27 @@
                 {% endif%}
                 </a>
                 <a href="/auth/edit_userdetails/{{userdetails.id}}">
-                <span class="glyphicon glyphicon-edit text-warning" aria-hidden="true">Edit profile
+                <span class="glyphicon glyphicon-edit text-success" aria-hidden="true">Edit profile
                 </span> 
                 </a>
                 <br/>
-                <h4>ES Links</h4>
                 {% if user.is_superuser %}
                 <a href="/admin/">Admin Panel</a> <br />
               {%endif %}
                 <div>
                   <span>
-                  <label> First Name:</label> <br/>
-                  <span class='text-warning'>{{user.first_name|capfirst}} </span> <br/>
-                  <label> Last Name:</label> <br/>
-                  <span class='text-warning'>{{user.last_name|capfirst}} </span> <br/>
+                  <label> Name:</label> <br/>
+                  <span class=''>{{user.first_name|capfirst}} &nbsp
+                  {{user.last_name|capfirst}}</span> <br/>
                   <label> Occupation:</label> <br/>
-                  <span class='text-warning'>{{userdetails.occupation|capfirst}} </span><br/>
+                  <span class=''>{{userdetails.occupation|capfirst}} </span><br/>
                   <label> Email:</label><br/>
-                  <span class='text-warning'> {{user.email}} </span>
+                  <span class='text-info'> {{user.email}} </span>
                   </span>
                 
                 </div>
                 {% else %}
-                <h4 class='text-info'>System Links</h4>
+                <h4 class='text-info'>Outfit</h4>
                 <a href="{% url 'register' %}">Register</a> <br />
                 <a href="{% url 'password_reset_recover'%}">Password Reset</a>
                
