--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -23,6 +23,8 @@
     <script src="{{STATIC_URL}}js/placeautocomplete.js"></script>
     <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.js"></script>
     <script src="{{STATIC_URL}}js/jquery.slides.min.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.confirm.min.js"></script>
+     <script src="{{STATIC_URL}}js/main.js"></script>
     <!--Google API-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
