--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -28,15 +28,14 @@
             <a href="{% url 'add_user_activity' %}">Add Activity</a>
         {%endif%}
         
-        {% for activity in activities %}
+        {% for activity, clothi in clothes %}
         <dl>
           <dt><span class='text-info'> Location:</span>
           <span>&nbsp{{activity.event_location|capfirst }}</span>
           <span class="text-info">EventName:</span>
           <span>&nbsp{{activity.event_name|capfirst}}</span>
           </dt>
-            
-        {% for cloth in clothes.0 %}
+        {% for cloth in clothi %}
         <dd>
             <a href="/auth/get_facts/{{cloth.id}}/view/">
             <img src="{{ cloth.cloth_image.url }}" class='img-rounded text-center' alt="{{cloth.cloth_description}}" />
