--- a/outfit/templates/user_auth/add_user_activity.html
+++ b/outfit/templates/user_auth/add_user_activity.html
@@ -19,7 +19,7 @@
 
 <div class='row'>
     <div class='col-md-offset-3 col-md-6'>
-        <h3 class='text-info'>Add Activity</h3>
+        <h3 class='text-info'>Add Activity/Event</h3>
         <form role="form"  method="post" action="/auth/add_user_activity/" >
         
         <fieldset>
