--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -18,13 +18,17 @@
     <link href="{{ STATIC_URL}}css/dashboard.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/main.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/datetimepicker.css" rel="stylesheet">
+    <!--Google Map API call-->
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
     <!--javascript/jquery links-->
     <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
     <script src="{{STATIC_URL}}js/placeautocomplete.js"></script>
+    <script src="{{STATIC_URL}}js/googlemap.js"></script>
     <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.js"></script>
     <script src="{{STATIC_URL}}js/jquery.slides.min.js"></script>
     <script src="{{STATIC_URL}}js/jquery.confirm.min.js"></script>
-     <script src="{{STATIC_URL}}js/main.js"></script>
+     <script src="{{STATIC_URL}}js/outfit_main.js"></script>
+     
     <!--Google API-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
