--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -105,7 +105,8 @@
                 </a>
                 <br/>
                 {% if user.is_superuser %}
-                <a href="/admin/">Admin Panel</a> <br />
+                <a href="/admin/">Admin</a> <br />
+                <a href="{% url 'admin_panel' %}">Panel Reports</a> <br />
               {%endif %}
                 <div>
                   <span>
