--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -51,11 +51,11 @@
             <div class="panel-body">
             <div>
                 <span class='text-info'> Type:</span>
-                <span>&nbsp{{activity.0.category|capfirst }}</span>
+                <span>&nbsp;{{activity.0.category|capfirst }}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="text-info">Start Time:</span>
-                <span>&nbsp{{activity.0.start_time|capfirst}}</span>  
+                <span>&nbsp{{activity.0.start_time|capfirst}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class='text-info'> Location:</span>
-                <span>&nbsp{{activity.0.event_location|capfirst }}</span>
+                <span>&nbsp{{activity.0.event_location|capfirst }}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span class="text-info">EventName:</span>
                 <span>&nbsp{{activity.0.event_name|capfirst}}</span>  
             </div>
