--- a/outfit/templates/user_auth/closet_upload.html
+++ b/outfit/templates/user_auth/closet_upload.html
@@ -14,6 +14,7 @@
 
 <div class='row'>
     <div class='col-md-offset-3 col-md-6'>
+        <div class="jumbotron">
         <h3 class='text-info'>Upload Cloth to Your Closet</h3>
         <form role="form"  method="post" action="/auth/closet_upload/" enctype="multipart/form-data">
         <fieldset>
@@ -23,7 +24,8 @@
         {% crispy clothform %}
         </fieldset>
         <button type="submit" class="btn btn-success">Complete</button>
-        </form> 
+        </form>
+        </div>
     </div>
 </div>
 
