--- a/outfit/templates/user_auth/registeration.html
+++ b/outfit/templates/user_auth/registeration.html
@@ -2,14 +2,16 @@
 {% load bootstrap_toolkit %}
 {% block body_block %}
 <div class='col-md-6 col-md-offset-2'>
+<div class="jumbotron">
 <form role="form" class="form-horizontal" method="post" action="/auth/register/">
 <legend>Registration Form</legend>
                                 {% csrf_token %}
                                 {% load crispy_forms_tags %}
                                 {% crispy userform %}
                                 
-                                <button type="submit" class="btn btn-success">Register</button>
-                </form>
-                </div>  
+                <button type="submit" class="btn btn-success">Register</button>
+ </form>
+</div>
+</div>  
 
 {% endblock %}
