--- a/outfit/templates/user_auth/update_cloth_facts.html
+++ b/outfit/templates/user_auth/update_cloth_facts.html
@@ -26,6 +26,7 @@
         
         <div class='col-md-6'>
         <h3 class='text-info'>Update Cloth Facts</h3>
+        <div class="jumbotron">
         <form role="form"  method="post" action="/auth/update_cloth_facts/{{cloth.id}}/view/" >
             <fieldset>
             {% csrf_token %}
@@ -38,8 +39,8 @@
             <a href="/auth/get_facts/{{cloth.id}}/view/">
             <button type='button' class='btn btn-danger'>Cancel</button>
             </a>
-            
         </form>
+        </div>
         </div>
     </div>
 
