--- a/outfit/templates/user_auth/panel_reports.html
+++ b/outfit/templates/user_auth/panel_reports.html
@@ -18,6 +18,30 @@
     
 <div class="row">
     <div class='col-md-12'>
+        <h3 class='text-info'>Report</h3>
+            <div class="panel panel-default">
+            <div class="table-responsive">
+            <table class='table table-stripped table-hover '>
+                <tr>
+                    <td><strong>User</strong></td>
+                    <td><strong>Date Joined</strong></td>
+                    <td><strong>Is Active</strong></td>
+                    <td><strong>Number Of Clothes</strong></td>
+                    <td><strong>Number Of Activities</strong></td>
+                </tr>
+            
+                {% for user in userslist %}
+                    
+                    <tr>
+                        <td>{{user.0.username}} </td>
+                        <td>{{user.0.date_joined}} </td>
+                        <td>{{user.0.is_active}} </td>
+                        <td>{{user.1}} </td>
+                        <td>{{user.2}} </td>
+                    </tr>
+                {%endfor%}
+        
+            </table>
        
     </div>
 
