--- a/outfit/templates/user_auth/userdetails.html
+++ b/outfit/templates/user_auth/userdetails.html
@@ -24,7 +24,7 @@
             <fieldset>
                 {% csrf_token %}
                 {% load crispy_forms_tags %}
-                {% crispy userdetails%}
+                {% crispy userdetail%}
             </fieldset>
             <button type="submit" class="btn btn-success">Complete</button>
         </form>
