--- a/outfit/templates/user_auth/user_activity.html
+++ b/outfit/templates/user_auth/user_activity.html
@@ -54,7 +54,7 @@
                 <h4 class="text-info">Weather Details For Today's Events:</h4>
                 {% if not weather_st%}
                     <span>No Today's Weather Details </span>
-                    <a href="{% url 'add_user_activity' %}">
+                    <a href='{% url "add_user_activity" %}'>
                     <button class="btn btn-success">Add today's Activity</button>
                     </a>
                 {%endif%}
@@ -100,6 +100,11 @@
                        {%endfor%}
                        </div>
                         <h4>MAP</h4>
+                        <div class="btn-show">
+                        <button class="btn btn-sm btn-default" onclick="codeAddress()">Show</button>
+                        <input type="hidden" id="address" value="{{ weather.location.city }},
+                            {{ weather.location.country }}" />
+                        </div>
                         <div id="googleMap" style="width:500px;height:380px;"></div>
                       </div>
                     </div>
